# qpy-dev

./: .editorconfig  .env  .gitignore  README.md  TODOS.md  pyproject.toml  ruff_defaults.toml
modules/: check.toml  clone.toml  config.toml  deps.py  docs.toml  fmt.toml  git.toml  lint.toml  moodle.toml  qpy.toml  repos.toml  setup.toml  sync_config.py  test.toml  tox.toml  typecheck.toml  up.toml  utils.toml  venv.toml
modules/poe/: deps.toml  qpy.toml  utils.toml
modules/python/qpy_dev/: dependency_manager.py  exceptions.py  merge_dependencies.py
scratch/: README.md  running-act.md
